fix: Add scrollbar for dropdown in case of too many results

--- a/src/Blaster.WebApi/Features/Shared/styles.scss
+++ b/src/Blaster.WebApi/Features/Shared/styles.scss
@@ -78,6 +78,7 @@ $navbar-padding-horizontal: 10em;
     width: 240px;
     background: #e6eaf7;
     z-index: 999; // It's kinda hacky and I don't like it, not one bit.
+    overflow: auto;
 }
 
 .channel {
